03-static-binary-service/metallb-00-static-binary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elk
  namespace: sothothv2-ns
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"  # 可选：允许IP共享
spec:
  type: LoadBalancer
  selector:
    app: "static-binary-service"
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  loadBalancerIP: "192.168.12.90"  # 必须在static-ips-pool范围内
