03-static-binary-service/static-binary-02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-binary-service
  namespace: sothothv2-ns
spec:
  selector:
    app: static-binary-service
  ports:
    - port: 80
      targetPort: 80  # 根据您的实际容器端口调整

---

apiVersion: v1
kind: Service
metadata:
  name: static-binary-file
  namespace: sothothv2-ns
spec:
  selector:
    app: static-binary-file
  ports:
    - port: 80
      targetPort: 80  # 根据您的实际容器端口调整
